﻿v8.4
-----
: Fixed an issue where search results would be duplicated under certain circumstances


v8.3
-----
+ Added a toggle to the market page to hide the list of individual games
+ Added a new feature that allows you to leave several groups at once without having to reload the page
+ Added a button to store pages to open that link in the Steam client
+ Added pricing support for Sila Games, Playfield, and Imperial Games
+ Added an option to disable automatically filtering guides by user language
: Fixed the market page totals to work with listings placed on hold
: Fixed a layout issue that caused header links not to show properly in the Steam header
: Fixed a bug that caused regional price comparisons not to show if the first sub on the page is free
: Fixed a bug that caused market sales totals not to display correctly

v8.2.4
-----
: Fixed a bug in country detection code

v8.2.3
-----
+ Added an option in the price menu to override prices displayed by Enhanced Steam
: Quick and Instant sale currency will now always match the user's wallet currency type

v8.2.2
-----
+ Added early access banners to highlighted sale items and top selling, etc items on sale homepage
: Resolved another issue with the new currency detection function

v8.2.1
-----
: Fixed a bug in the new currency detection function

v8.2
-----
+ Significantly improved speed when getting data for app and profile pages and implemented client-side caching
+ Improved currency and country code detection for price history and regional price comparisons
+ Greatly reduced the number of requests required for retrieving currency conversion information
: Fixed an issue where the Enhanced Steam menu wasn't visible to users who weren't logged in to Steam
: Fixed a bug Valve created where wishlist "Links" dropdowns won't display correctly
: Moved price history on wishlists to the bottom of each entry to prevent elements shifting after data loads